# term.everything

./: .containerignore  .gitignore  .gitmodules  ChangeLog.md  Contributing.md  Readme.md  Taskfile.dist.yml  distribute.sh  package.json  tsconfig.json
.github/: FUNDING.yml
c_interop/: Readme.md  Taskfile.dist.yml  meson.build
c_interop/include/: ChafaInfo.h  Client_State.h  Draw_State.h  Get_Message_and_File_Descriptors.h  Listen_for_New_Client.h  SHM_Pool_Memory.h  Send_Message_And_File_Descriptors.h  TermSize.h  ansi_escape_codes.h  close_wayland_socket.h  detect_terminal.h  draw_desktop.h  get_fd.h  get_socket_path_from_name.h  init_draw_state.h  listen_to_wayland.h  memcopy_buffer_to_uint8array.h  mmap_fd.h  remove_file_if_it_exists.h
c_interop/src/: ChafaInfo.cpp  Client_State.cpp  Draw_State.cpp  Get_Message_and_File_Descriptors.cpp  Listen_for_New_Client.cpp  NODE_API_MODULE.cpp  SHM_Pool_Memory.cpp  Send_Message_And_File_Descriptors.cpp  TermSize.cpp  ansi_escape_codes.cpp  close_wayland_socket.cpp  detect_terminal.cpp  draw_desktop.cpp  get_fd.cpp  get_socket_path_from_name.cpp  init_draw_state.cpp  listen_to_wayland.cpp  memcopy_buffer_to_uint8array.cpp  mmap_fd.cpp  remove_file_if_it_exists.cpp
patches/canvas/: Readme.md  new.js  old.js
resources/: ContainerFile  HowIDidIt.md  LICENSES.txt  Readme.md  help.md  term.everything❗mmulet.com.desktop
scripts/: BunInstallTypes.yml  Taskfile.dist.yml  package.json
scripts/generate_protocol/: Taskfile.dist.yml
scripts/generate_protocol/protocols/: xdg-decoration-unstable-v1.xml  xdg-shell.xml  xwayland-keyboard-grab-unstable-v1.xml  xwayland-shell-v1.xml
scripts/generate_protocol/src/: Protocol.ts  build_protocol.ts  debug_if_statement.ts  enum_name.ts  gen_enums.ts  gen_events.ts  gen_interface_interface.ts  gen_request_handler.ts  main.ts
scripts/hide-show/: Taskfile.dist.yml  main.ts
scripts/make-wayland-interface-object/: Taskfile.dist.yml  main.ts
scripts/make_source/: Taskfile.dist.yml  get_file.ts  main.ts  remove.ts
src/: Ansi_Escape_Codes.ts  Canvas_Desktop.ts  Decode_State.ts  File_Descriptor_Claim.ts  GlobalObjects.ts  GlobalObjects_To_ID.ts  Linux_Event_Codes.ts  Message_Decoder.ts  Object_ID_To_Wayland_Object.ts  Role_or_xdg_surface_Object_ID.ts  Send_Message.ts  Sender.ts  Size.ts  Status_Line.ts  Surface_Role.ts  Surface_Update.ts  Terminal_Window.ts  Wayland_Client.ts  Wayland_Object.ts  Wayland_Socket_Listener.ts  apply_wl_surface_double_buffered_state.ts  auto_release.ts  c_interop.cjs  c_interop.ts  c_interop_node_path.ts  c_promises.ts  convert_keycode_to_xbd_code.ts  copy_buffer_to_wl_surface_texture.ts  debug.ts  debug_turn_off_output.ts  get_display_server_type.ts  get_version_of_app.ts  index.ts  keycode_single_codes.ts  log_to_main_screen.ts  never_default.ts  on_exit.ts  parse_args.ts  pointer_code.ts  render_markdown_to_terminal.ts  (+4 more)
src/objects/: Readme.md  wl_compositor.ts  wl_data_device.ts  wl_data_device_manager.ts  wl_data_offer.ts  wl_data_source.ts  wl_display.ts  wl_keyboard.ts  wl_output.ts  wl_pointer.ts  wl_region.ts  wl_registry.ts  wl_seat.ts  wl_shm.ts  wl_shm_pool.ts  wl_subcompositor.ts  wl_subsurface.ts  wl_surface.ts  wl_touch.ts  xdg_popup.ts  xdg_positioner.ts  xdg_surface.ts  xdg_toplevel.ts  xdg_wm_base.ts  xwayland_shell_v1.ts  xwayland_surface_v1.ts  zwp_xwayland_keyboard_grab_manager_v1.ts  zwp_xwayland_keyboard_grab_v1.ts  zxdg_decoration_manager_v1.ts  zxdg_toplevel_decoration_v1.ts
tests/: Taskfile.dist.yml  TestNested.dist.yml
